2010-10-15 Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15993: Bug: Felogin shouldn't show the permalogin form controls when permalogin is set to "forced on" in install tool

2010-10-14  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #103: No Plain-text List Option

2010-10-12  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15168: Template auto complete is hidden beneath next text area field

2010-10-11  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #12376: typo3temp got filled with thousands of javascript_* files (Thanks to Georg Ringer)

2010-10-10  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15835: deprecationLog in console crashes output on login page
	* Fixed bug #15727: Clean-up for PageRenderer
	* Fixed bug #15690: Change text of exception in t3lib_cache_frontend_stringfrontend
	* Fixed bug #15944: Flashmessage "content_from_pid" misses page title

2010-10-09  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #8785: TCAselectItem not working for all tables (Thanks to Sebastian  Michaelsen)
	* Fixed bug #15865 clickmenu breaks if no record set. (Thanks to Bjoern Pedersen)
	* Fixed bug #15230: Bug/Feature: Core only is able to load one specific IE6 CSS file (Thanks to Steffen Ritter)

2010-10-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15858: htlmArea RTE: Stylesheet access error in Google Chrome 7
	* Fixed bug #15863: htmlArea RTE: Initialization never completes in Google Chrome 7
	* Follow-up to bug #15858: htlmArea RTE: Stylesheet access error in Google Chrome 7
	* Fixed bug #15899: htmlArea RTE: Editing area collapsed in Chrome 7
	* Fixed bug #15893: htmlArea RTE: Insufficient Check for BE / FE Context (Thanks to Ingo Renner)

2010-10-06  Susanne Moog  <typo3@susanne-moog.de>

	*  Fixed bug #15840: Broken loading icon when loading IRRE elements (thanks to Lars Houmark)

2010-10-06  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15784: Resolve errors in tslib_content

2010-10-06  Benjamin Mack  <benni@typo3.org>
